@@ -1,4 +1,6 @@
-﻿using MigSharp.Core.Commands;
+﻿using System;
+
+using MigSharp.Core.Commands;
 
 namespace MigSharp.Core.Entities
 {
@@ -13,9 +15,12 @@ namespace MigSharp.Core.Entities
 
         public void Drop()
         {
-            // FEATURE: implement generic validation where providers are asked what they support and what not
-            // not supported by Teradata
             _command.Add(new DropCommand(_command));
+        }
+
+        public void Rename(string newName)
+        {
+            _command.Add(new RenameCommand(_command, newName));
         }
     }
 }
