@@ -32,6 +32,8 @@ namespace MigSharp.Core.Entities
 
         public IExistingPrimaryKey PrimaryKey(string constraintName)
         {
+            if (string.IsNullOrEmpty(constraintName)) throw new ArgumentException("Empty constraintName.");
+
             var command = new AlterPrimaryKeyCommand(_command, constraintName);
             _command.Add(command);
             return new ExistingPrimaryKey(command);
