@@ -9,5 +9,11 @@
         /// Drops the primary key constraint.
         /// </summary>
         void Drop();
+
+        /// <summary>
+        /// Renames the primary key constraint.
+        /// </summary>
+        /// <param name="newName"></param>
+        void Rename(string newName);
     }
 }
